--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -202,4 +202,11 @@
   background-image: url('../assets/images/dot-seamless-pattern.svg');
 }
 
+.hero-container {
+  margin: 0 auto;
+}
+
+.whyElida {
+  margin: 0 auto;
+}
 
