--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -210,3 +210,13 @@
   margin: 0 auto;
 }
 
+.service-wrap {
+  margin: o auto;
+}
+.card-container {
+  margin: 0 auto;
+}
+
+.s-wrap {
+  margin: 0 auto;
+}
