--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -32,5 +32,5 @@
 }
 
 .service-card {
-  @apply flex flex-col items-center text-center
+  @apply flex flex-col items-center text-center max-w-sm sm:mx-4
 }
